updates on schoolUser approvals